--- a/public/template/admin_default/backstage/order/index.html
+++ b/public/template/admin_default/backstage/order/index.html
@@ -94,7 +94,7 @@
                 		</div>
                 	</div>
                 	<div class="oneselect">
-                		<div class="title">打印：</div>
+                		<div class="title">退款：</div>
                 		<div class="select_box" style="width:100px;">
                 			<php> $select_get = input('refund', -1);</php>
                 			<select name="refund" lay-filter="select_text">
