--- a/public/template/admin_default/backstage/addons/adminlist.html
+++ b/public/template/admin_default/backstage/addons/adminlist.html
@@ -5,9 +5,9 @@
 		<div class="layui-elem-quote" >
 			<a href="{:url('backstage/Index/index')}">首页<span class="layui-box">&gt;</span></a>
 			<a><cite>{$title}</cite></a>
-			<div class="page-toolbar">
+<!-- 			<div class="page-toolbar">
 				<include file="public/_addTo"/>
-			</div>
+			</div> -->
 		</div>
 		<!-- 数据列表 -->
 		<div class="data-table table-striped layui-form">
