--- a/public/template/admin_default/backstage/addons/index.html
+++ b/public/template/admin_default/backstage/addons/index.html
@@ -5,9 +5,9 @@
         <div class="layui-elem-quote" >
             <a href="{:url('Backstage/Index/index')}">首页<span class="layui-box">&gt;</span></a>
             <a><cite>{:lang("_PLUGIN_LIST_")}</cite></a>
-            <div class="page-toolbar">
+<!--             <div class="page-toolbar">
                 <include file="public/_addTo"/>
-            </div>
+            </div> -->
         </div>
         <div class="with-padding">
             <a href="{:url('hooks')}" class="layui-btn layui-btn-primary">{:lang("_HOOK_MANAGEMENT_")}</a>
