--- a/public/template/admin_default/backstage/auth_manager/index.html
+++ b/public/template/admin_default/backstage/auth_manager/index.html
@@ -3,9 +3,9 @@
 	<div class="layui-elem-quote" >
 		<a href="{:url('backstage/Index/index')}">首页<span class="layui-box">&gt;</span></a>
 		<a><cite>{:lang('_AUTH_MANAGER_')}</cite></a>
-		<div class="page-toolbar">
+<!-- 		<div class="page-toolbar">
 			<include file="public/_addTo"/>
-		</div>
+		</div> -->
 	</div>
 
 	<!--<fieldset class="layui-elem-field layui-field-title">-->
