--- a/public/template/admin_default/backstage/district/index.html
+++ b/public/template/admin_default/backstage/district/index.html
@@ -4,9 +4,9 @@
     <div class="layui-elem-quote" >
         <a href="{:url('backstage/Index/index')}">首页<span class="layui-box">&gt;</span></a>
         <a><cite>地区库</cite></a>
-        <div class="page-toolbar">
+<!--         <div class="page-toolbar">
             <include file="public/_addTo"/>
-        </div>
+        </div> -->
     </div>
 
     <div class="with-padding" style="margin-bottom: 0px;">
