--- a/public/template/admin_default/backstage/public/base.html
+++ b/public/template/admin_default/backstage/public/base.html
@@ -39,7 +39,7 @@
     <div class="layui-header header header-demo">
         <div class="layui-main">
             <div style="font-size: 24px;color: #ffffff;font-weight: bold;height:60px;line-height: 55px;">
-                益丰农舍管理后台
+                益丰众购管理后台
             </div>
             <ul class="layui-nav" pc="">
                 <volist name="__MENU__.main" id="menu">
