--- a/public/template/admin_default/backstage/role/modulerole.html
+++ b/public/template/admin_default/backstage/role/modulerole.html
@@ -4,9 +4,9 @@
         <div class="layui-elem-quote" >
             <a href="{:url('Backstage/Index/index')}">首页<span class="layui-box">&gt;</span></a>
             <a><cite>按身份允许模块前台访问！（都不选表示非登录状态也可访问）</cite></a>
-            <div class="page-toolbar">
+<!--             <div class="page-toolbar">
                 <include file="public/_addTo"/>
-            </div>
+            </div> -->
         </div>
         <div class="with-padding  layui-form">
             <form id="role_module_auth">
