--- a/public/template/admin_default/backstage/action/actionlog.html
+++ b/public/template/admin_default/backstage/action/actionlog.html
@@ -4,9 +4,9 @@
         <div class="layui-elem-quote" >
             <a href="{:url('Backstage/Index/index')}">首页<span class="layui-box">&gt;</span></a>
             <a><cite>{:lang("_BEHAVIOR_LOG_")}&nbsp;(<span style="color: red">{:lang("_THE_LONGTERM_ACCUMULATION_OF_BEHAVIOR_LOG_WILL_LEAD_TO_THE_WHOLE_SYSTEM_PERFORMANCE_DEGRADATION_")}</span>)</cite></a>
-            <div class="page-toolbar">
+<!--             <div class="page-toolbar">
                 <include file="public/_addTo"/>
-            </div>
+            </div> -->
         </div>
         <!--<fieldset class="layui-elem-field layui-field-title">-->
             <!--<legend>-->
