--- a/public/template/admin_default/backstage/database/import.html
+++ b/public/template/admin_default/backstage/database/import.html
@@ -5,9 +5,9 @@
         <div class="layui-elem-quote" >
             <a href="{:url('Backstage/Index/index')}">首页<span class="layui-box">&gt;</span></a>
             <a><cite>{:lang("_DATA_BACKUP_")}</cite></a>
-            <div class="page-toolbar">
+<!--             <div class="page-toolbar">
                 <include file="public/_addTo"/>
-            </div>
+            </div> -->
         </div>
         <div class="with-padding">
             <table class="layui-table" lay-even>
