--- a/public/template/admin_default/backstage/order/index.html
+++ b/public/template/admin_default/backstage/order/index.html
@@ -30,10 +30,18 @@
         <div class="with-padding" style="margin-bottom: 0px;">
             <div class="fl layui-form">
             	<div class="layui-btn-group" style="margin-bottom: 10px;">
-	                <a class="layui-btn print-btn" data-confirm="打印所选项" data-param="true" url="{:url('Order/print_select')}">打印所选项</a>
-	                <a class="layui-btn print-btn" data-confirm="打印筛选结果" url="{:url('Order/print_search')}">打印筛选结果</a>
-	                <a class="layui-btn fund-btn" data-confirm="退还所选项" data-param="true" url="{:url('Order/refunds')}">退还所选项</a>
-	                <a class="layui-btn fund-btn" data-confirm="退还筛选结果" url="{:url('Order/refunds')}">退还筛选结果</a>
+                    <if condition="$is_auth1 eq 0">
+                        <a class="layui-btn print-btn" data-confirm="打印所选项" data-param="true" url="{:url('Order/print_select')}">打印所选项</a>
+                    </if>
+	                <if condition="$is_auth2 eq 0">
+                        <a class="layui-btn print-btn" data-confirm="打印筛选结果" url="{:url('Order/print_search')}">打印筛选结果</a>
+                    </if>
+	                <if condition="$is_auth3 eq 0">
+                        <a class="layui-btn fund-btn" data-confirm="退还所选项" data-param="true" url="{:url('Order/refunds')}">退还所选项</a>
+                    </if>
+	                <if condition="$is_auth4 eq 0">
+                        <a class="layui-btn fund-btn" data-confirm="退还筛选结果" url="{:url('Order/refunds')}">退还筛选结果</a>
+                    </if>
 	                <!-- 高级搜索 -->
 	            </div>
 	         </div>
