--- a/public/template/admin_default/backstage/auth_manager/user.html
+++ b/public/template/admin_default/backstage/auth_manager/user.html
@@ -10,7 +10,7 @@
             <div class="col-xs-10" style="padding-right:0px;padding-left:0px;">
                 <ul class="nav nav-tabs">
                     <li><a href="{:url('AuthManager/access',array('group_name'=>input('group_name') ,'group_id'=> input('group_id')))}">{:lang("_MANAGEMENT_BACKGROUND_AUTHORIZATION_")}</a></li>
-                    <li><a href="{:url('AuthManager/accessUser',array('group_name'=>input('group_name') ,'group_id'=> input('group_id')))}">{:lang("_FRONT_DESK_ACCESS_AUTHORIZATION_")}</a></li>
+                    <!-- <li><a href="{:url('AuthManager/accessUser',array('group_name'=>input('group_name') ,'group_id'=> input('group_id')))}">{:lang("_FRONT_DESK_ACCESS_AUTHORIZATION_")}</a></li> -->
                     <li class="active"><a href="javascript:;">{:lang("_MEMBER_DELEGATION_")}</a></li>
                 </ul>
             </div>
