--- a/public/template/admin_default/backstage/order/print_select.html
+++ b/public/template/admin_default/backstage/order/print_select.html
@@ -37,6 +37,8 @@
 		<div>联系电话：{$vo.address_mobile}</div>
 		<div>收货地址：{$vo.province_name}{$vo.city_name}{$vo.district_name}{$vo.street_name}{$vo.pos_community}</div>
 		<div>==============================</div>
+		<div>备注：{$vo.remark}</div></div>
+		<div>==============================</div>
 		<div>谢谢惠顾</div>
 		<div>欢迎再次光临</div>
 		<div>请妥善保留收银条和销售凭证</div>
