--- a/public/template/admin_default/backstage/order/index.html
+++ b/public/template/admin_default/backstage/order/index.html
@@ -135,6 +135,7 @@
 	                    <th>订单价格</th>
 	                    <th>备注信息</th>
 	                    <th>是否打印</th>
+	                    <th>应退还金额</th>
 	                    <th>是否退款</th>
 	                    <th>状态</th>
 	                    <th>创建时间</th>
@@ -153,6 +154,7 @@
 	                            <td>{$row.total_fee}</td>
 	                            <td>{$row.remark}</td>
 	                            <td>{$row.printdtext}</td>
+	                            <td>{$row.refund_fee}</td>
 	                            <td>{$row.refundtext}</td>
 	                            <td>{$row.statustext}</td>
 	                            <td>{$row.create_time}</td>
