--- a/public/template/admin_default/backstage/order/print_select.html
+++ b/public/template/admin_default/backstage/order/print_select.html
@@ -8,19 +8,14 @@
 
 <volist name="orders" id="vo">
 	<div style="text-align:left;">
-		<div style="text-align:center;">欢迎光临</div>
-		<div style="text-align:center;">益丰众购</div>
+		<div style="text-align:center;">欢迎光临益丰众购</div>
 		<div>==============================</div>
 		<div>订单号：{$vo.out_trade_no}</div>
 		<div>用户名：{$vo.nickname}</div>
 		<div>------------------------------------</div>
 		<div>
 		<volist name="vo.products" id="good">
-			<div>品名：{$good.name}</div>
-			<div>初始单价：￥{$good.price}</div>
-			<div>成团单价：￥{$good.curr_price}</div>
-			<div>数量：{$good.num}</div>
-			<div>金额：￥{$good.num_price}</div>
+			<div>成团价格：{$good.name}  ￥{$good.curr_price}*{$good.num}</div>
 			<if condition="$i neq count($vo.products)">
 				<div>&nbsp;&nbsp;</div>
 			</if>
@@ -30,7 +25,7 @@
 		<div>优惠券：-￥{$vo.coupon * $config.COUPON_DENOMINATION}（{$vo.coupon}张）</div>
 		<div>运费：+￥{$vo.freight}（满{$config.FREIGHT_QUOTA}免运费）</div>
 		<div>------------------------------------</div>
-		<div>合计：￥{$vo.total_fee}</div>
+		<div>合计：￥{$vo.curr_total_fee}</div>
 		<div>时间：{$vo.create_time}</div>
 		<div>==============================
 		<div>联系人：{$vo.address_name}</div></div>
@@ -38,11 +33,6 @@
 		<div>收货地址：{$vo.province_name}{$vo.city_name}{$vo.district_name}{$vo.street_name}{$vo.pos_community}</div>
 		<div>==============================</div>
 		<div>备注：{$vo.remark}</div></div>
-		<div>==============================</div>
-		<div>谢谢惠顾</div>
-		<div>欢迎再次光临</div>
-		<div>请妥善保留收银条和销售凭证</div>
-		<div>如需发票，凭此单和销售凭证在总服务台办理</div>
 	</div>
 	
 	<if condition="$i neq count($orders)">
