--- a/public/template/admin_default/backstage/order/print_select.html
+++ b/public/template/admin_default/backstage/order/print_select.html
@@ -23,7 +23,7 @@
 		</div>
 		<div>------------------------------------</div>
 		<div>优惠券：-￥{$vo.coupon * $config.COUPON_DENOMINATION}（{$vo.coupon}张）</div>
-		<div>运费：+￥{$vo.freight}（满{$config.FREIGHT_QUOTA}免运费）</div>
+		<div>运费：+￥{$vo.freight}</div>
 		<div>------------------------------------</div>
 		<div>合计：￥{$vo.curr_total_fee}</div>
 		<div>时间：{$vo.create_time}</div>
