--- a/public/template/default/home/index/index.html
+++ b/public/template/default/home/index/index.html
@@ -1,131 +1,159 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
-    <include file="public@head"/>
+    <title>益丰众购社区生鲜</title>
+    <meta charset="UTF-8">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="Keywords" content="你我您社区购物,你我您,社区购,"/>
+    <meta content="你我您社区购物,你我您,社区购," name="description">
+    <meta content="" name="author">
+    <link rel="stylesheet" type="text/css" href="__TMPL__/static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="__TMPL__/static/css/index.css?tabs1">
 </head>
+<script type="text/javascript">
+// 注册 service worker
+if ('serviceWorker' in navigator) {  
+   navigator.serviceWorker.register('/webwork.js')
+     .then((registration)=>{})
+     .catch((err)=>{})
+}
+function browserRedirect() {
+    var sUserAgent = navigator.userAgent.toLowerCase();
+    var bIsIpad = sUserAgent.match(/ipad/i) == "ipad";
+    var bIsIphoneOs = sUserAgent.match(/iphone os/i) == "iphone os";
+    var bIsMidp = sUserAgent.match(/midp/i) == "midp";
+    var bIsUc7 = sUserAgent.match(/rv:1.2.3.4/i) == "rv:1.2.3.4";
+    var bIsUc = sUserAgent.match(/ucweb/i) == "ucweb";
+    var bIsAndroid = sUserAgent.match(/android/i) == "android";
+    var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";
+    var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";
+    if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) {
+        return false;
+    } else {
+        return true;
+    }
+}
+var isPc=browserRedirect();
+if (!isPc) {
+    window.location.href='mobile.html'
+}
+
+</script>
 <body>
-<include file="public@header"/>
-<div class="get">
-    <div class="am-g">
-        <div class="am-u-lg-12">
-            <h1 class="get-title">Amaze UI - HTML5 跨屏前端框架</h1>
+<div class="wrapper">
+<!--     <div class="tabs clearfix">
+        <div>
+            <img src="__TMPL__/static/images/img_logoniwonin.png" alt="">
+            <div class="tabs-cont clearfix">
+                <a href="#" class="active">首页</a>
+                <a href="admission.html" target="_blank">入驻流程</a>
+            </div>
+        </div>
+    </div> -->
+    <div class="header">
+        <img src="__TMPL__/static/images/img_bannerb.png" class="pchead_img" />
+        <div class="pcheader_box">
+            <dl>
+                <dt>
+                    <h3><font style="padding-right:20px;">益丰众购</font><span>社区生鲜直购</span></h3>
+                    <p class="imgp">
+                        <img src="__TMPL__/static/images/Group.png">
+                    </p>
+                    <p class="pcheaderbox_p">温·情·社·区·服·务</p>
 
-            <p>
-                期待你的参与，共同打造一个简单易用的前端框架
-            </p>
-
-            <p>
-                <a href="http://amazeui.org" class="am-btn am-btn-sm get-btn">获取新get技能√</a>
-            </p>
+                </dt>
+                <dd>
+                    <h3>微信扫码体验</h3>
+                    <p>优质产品质量保证</p>
+                    <img src="__TMPL__/static/images/img_erweima.png">
+                </dd>
+            </dl>
         </div>
     </div>
-</div>
-
-<div class="detail">
-    <div class="am-g am-container">
-        <div class="am-u-lg-12">
-            <h2 class="detail-h2">One Web 、Any Device，期待和你一起去实现!</h2>
-
-            <div class="am-g">
-                <div class="am-u-lg-3 am-u-md-6 am-u-sm-12 detail-mb">
-
-                    <h3 class="detail-h3">
-                        <i class="am-icon-mobile am-icon-sm"></i>
-                        为移动而生
-                    </h3>
-
-                    <p class="detail-p">
-                        Amaze UI 采用业内先进的 mobile first 理念，从小屏逐步扩展到大屏，最终实现所有屏幕适配，适应移动互联潮流。
-                    </p>
-                </div>
-                <div class="am-u-lg-3 am-u-md-6 am-u-sm-12 detail-mb">
-                    <h3 class="detail-h3">
-                        <i class="am-icon-cogs am-icon-sm"></i>
-                        组件丰富，模块化
-                    </h3>
-
-                    <p class="detail-p">
-                        Amaze UI 含近 20 个 CSS 组件、10 个 JS 组件，更有 17 款包含近 60 个主题的 Widgets，可快速构建界面出色、体验优秀的跨屏页面，大幅度提升你的开发效率。
-                    </p>
-                </div>
-                <div class="am-u-lg-3 am-u-md-6 am-u-sm-12 detail-mb">
-                    <h3 class="detail-h3">
-                        <i class="am-icon-check-square-o am-icon-sm"></i>
-                        本地化支持
-                    </h3>
-
-                    <p class="detail-p">
-                        相比国外的前端框架，Amaze UI 专注解决中文排版优化问题，根据操作系统调整字体，实现最佳中文排版效果；针对国内主流浏览器及 App 内置浏览器提供更好的兼容性支持，为你节省大量兼容性调试时间。
-                    </p>
-                </div>
-                <div class="am-u-lg-3 am-u-md-6 am-u-sm-12 detail-mb">
-                    <h3 class="detail-h3">
-                        <i class="am-icon-send-o am-icon-sm"></i>
-                        轻量级，高性能
-                    </h3>
-
-                    <p class="detail-p">
-                        Amaze UI 非常注重性能，基于轻量的 Zepto.js 开发，并使用 CSS3 来做动画交互，平滑、高效，更适合移动设备，让你的 Web 应用可以高速载入。
-                    </p>
-                </div>
+    <div class="container">
+        <div class="contop_box">
+            <dl>
+                <dt><img src="__TMPL__/static/images/img_shequpeisong.png"></dt>
+                <dd>
+                    <p>社区配送</p>
+                    <label>小区团长配送，家门口的贴心服务</label>
+                </dd>
+            </dl>
+            <dl>
+                <dt><img src="__TMPL__/static/images/img_chandizhicai.png"></dt>
+                <dd>
+                    <p>产地直采</p>
+                    <label>优质商品，产地直采想您所想供你所需</label>
+                </dd>
+            </dl>
+            <dl>
+                <dt><img src="__TMPL__/static/images/img_yunfeiquanmian.png"></dt>
+                <dd>
+                    <p>运费全免</p>
+                    <label>自营配送，完全免费社区直达安全快捷</label>
+                </dd>
+            </dl>
+            <dl>
+                <dt><img src="__TMPL__/static/images/img_shouhoufuwu.png"></dt>
+                <dd>
+                    <p>售后无忧</p>
+                    <label>温情社区服务，售后无忧及时反馈</label>
+                </dd>
+            </dl>
+        </div>
+        <div class="contai_tit">
+            <p>社区地址</p>
+            <label>COMMUNITY　ADDRESS</label>
+        </div>
+        <div class="contai_addre">
+            <span>成都高新区</span>
+        </div>
+        <div class="contai_list">
+            <ul>
+                <li>
+                    <img src="__TMPL__/static/images/img_1.png">
+                    <p>盛世嘉园</p>
+                    <label>四川省成都市高新区中和镇朝阳路425号</label>
+                </li>
+                <li>
+                    <img src="__TMPL__/static/images/img_2.png">
+                    <p>黄金时代</p>
+                    <label>四川省成都市高新区中和镇吉龙二街黄金时代235号</label>
+                </li>
+            </ul>
+        </div>
+        <div class="contai_addre">
+            <span>成都天府新区</span>
+        </div>
+        <div class="contai_list">
+            <ul>
+                <li>
+                    <img src="__TMPL__/static/images/img_3.png">
+                    <p>鑫苑.鑫都汇</p>
+                    <label>四川省成都市天府新区牧华路三段鑫苑.鑫都汇8栋4单元1704</label>
+                </li>
+            </ul>
+        </div>        
+        <p class="foot_p">更多社区服务店，更多城市请期待...</p>
+    </div>
+    <div class="footer">
+        <div class="footer_box">
+            <div class="footer_l">
+                <p>益丰众购小区团长免费加盟</p>
+                <p class="footer_num">156　8201　9629</p>
+            </div>
+            <div class="footer_l">
+                <p>益丰众购优质供应商入驻</p>
+                <p class="footer_num">156　8201　9629</p>
+            </div>
+            <div class="footer_r">
+                <p>微信搜索·益丰众购</p>
+                <p class="footer_last">蜀ICP备18022097号-1</p>
             </div>
         </div>
     </div>
 </div>
-
-<div class="hope">
-    <div class="am-g am-container">
-        <div class="am-u-lg-4 am-u-md-6 am-u-sm-12 hope-img">
-            <img src="assets/i/examples/landing.png" alt="" data-am-scrollspy="{animation:'slide-left', repeat: false}">
-            <hr class="am-article-divider am-show-sm-only hope-hr">
-        </div>
-        <div class="am-u-lg-8 am-u-md-6 am-u-sm-12">
-            <h2 class="hope-title">同我们一起打造你的前端框架</h2>
-
-            <p>
-                在知识爆炸的年代，我们不愿成为知识的过客，拥抱开源文化，发挥社区的力量，参与到Amaze Ui开源项目能获得自我提升。
-            </p>
-        </div>
-    </div>
-</div>
-
-<div class="about">
-    <div class="am-g am-container">
-        <div class="am-u-lg-12">
-            <h2 class="about-title about-color">Amaze UI 崇尚开放、自由，非常欢迎大家的参与</h2>
-
-            <div class="am-g">
-                <div class="am-u-lg-6 am-u-md-4 am-u-sm-12">
-                    <form class="am-form">
-                        <label for="name" class="about-color">你的姓名</label>
-                        <input id="name" type="text">
-                        <br/>
-                        <label for="email" class="about-color">你的邮箱</label>
-                        <input id="email" type="email">
-                        <br/>
-                        <label for="message" class="about-color">你的留言</label>
-                        <textarea id="message"></textarea>
-                        <br/>
-                        <button type="submit" class="am-btn am-btn-primary am-btn-sm"><i class="am-icon-check"></i> 提 交</button>
-                    </form>
-                    <hr class="am-article-divider am-show-sm-only">
-                </div>
-
-                <div class="am-u-lg-6 am-u-md-8 am-u-sm-12">
-                    <h4 class="about-color">关于我们</h4>
-
-                    <p>AllMobilize Inc (美通云动科技有限公司)
-                        由前微软美国总部IE浏览器核心研发团队成员及移动互联网行业专家在美国西雅图创立，旨在解决网页在不同移动设备屏幕上的适配问题。基于国际专利技术并结合最前沿的HTML5技术，云适配解决方案可以帮助企业快速将桌面版网站适配到各种移动设备终端的屏幕上，不仅显著地提高了企业网站的用户体验以及销售转化率，而且大幅度地节省了企业开发和维护移动网站的费用。</p>
-                    <h4 class="about-color">团队介绍</h4>
-
-                    <p>AllMobilize Inc 获得了微软创投孵化器的支持，其领先科技已得到全球多家企业及机构的认可与信赖，客户包括全球500强企业、美国政府、国内政府机关、国内外上市公司、以及互联网标准化组织W3C。</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- 底部 -->
-<include file="public@footer"/>
-<!-- /底部 -->
 </body>
 </html>
