--- a/public/template/default/home/index/wap.html
+++ b/public/template/default/home/index/wap.html
@@ -4,70 +4,55 @@
 <head>
     <title>益丰众购社区生鲜</title>
     <meta charset="UTF-8">
-    <meta content="width=device-width,initial-scale=1" name="viewport">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="screen-orientation" content="portrait">
+    <meta name="x5-orientation" content="portrait">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=0,minimal-ui">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="imagemode" content="force">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"><meta name="format-detection" content="telephone=no">
     <meta name="Keywords" content="益丰众购社区生鲜,益丰众购,社区购"/>
     <meta content="益丰众购社区生鲜,益丰众购,社区购" name="description">
-    <meta content="" name="author">
+    <meta content="益丰众购社区生鲜" name="author">
     <link rel="stylesheet" type="text/css" href="__TMPL__/static/css/base.css">
-    <link rel="stylesheet" type="text/css" href="__TMPL__/static/css/index.css?tabs1">
+    <link rel="stylesheet" type="text/css" href="__TMPL__/static/css/mobile.css">
 </head>
 <script type="text/javascript">
+var iWidth = document.documentElement.clientWidth;
+var iHeight = document.documentElement.clientHeight;
+if(isFirefox=navigator.userAgent.indexOf("Firefox")>0){  
+    iWidth = window.outerWidth;
+    iHeight =  window.outerHeight;
+}
+document.getElementsByTagName("html")[0].style.fontSize=iWidth/10+"px"; 
 // 注册 service worker
 if ('serviceWorker' in navigator) {  
-   navigator.serviceWorker.register('/webwork.js')
+   navigator.serviceWorker.register('webwork.js')
      .then((registration)=>{})
      .catch((err)=>{})
 }
-function browserRedirect() {
-    var sUserAgent = navigator.userAgent.toLowerCase();
-    var bIsIpad = sUserAgent.match(/ipad/i) == "ipad";
-    var bIsIphoneOs = sUserAgent.match(/iphone os/i) == "iphone os";
-    var bIsMidp = sUserAgent.match(/midp/i) == "midp";
-    var bIsUc7 = sUserAgent.match(/rv:1.2.3.4/i) == "rv:1.2.3.4";
-    var bIsUc = sUserAgent.match(/ucweb/i) == "ucweb";
-    var bIsAndroid = sUserAgent.match(/android/i) == "android";
-    var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";
-    var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";
-    if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) {
-        return false;
-    } else {
-        return true;
-    }
-}
-var isPc=browserRedirect();
-if (!isPc) {
-    window.location.href='mobile.html'
-}
-
 </script>
 <body>
 <div class="wrapper">
-<!--     <div class="tabs clearfix">
-        <div>
-            <img src="__TMPL__/static/images/img_logoniwonin.png" alt="">
-            <div class="tabs-cont clearfix">
-                <a href="#" class="active">首页</a>
-                <a href="admission.html" target="_blank">入驻流程</a>
-            </div>
-        </div>
-    </div> -->
     <div class="header">
-        <img src="__TMPL__/static/images/img_bannerb.png" class="pchead_img" />
+        <div class="pchead_img"></div>
         <div class="pcheader_box">
             <dl>
                 <dt>
-                    <h3><font style="padding-right:20px;">益丰众购</font><span>社区生鲜直购</span></h3>
+                    <h3><font>益丰众购</font><span>社区生鲜直购</span></h3>
                     <p class="imgp">
                         <img src="__TMPL__/static/images/Group.png">
                     </p>
                     <p class="pcheaderbox_p">温·情·社·区·服·务</p>
-
                 </dt>
                 <dd>
-                    <h3>微信扫码体验</h3>
-                    <p>优质产品质量保证</p>
                     <img src="__TMPL__/static/images/img_erweima.png">
+                    <div>
+                        <h3>微信扫码体验</h3>
+                        <p>优质产品质量保证</p>
+                        <button class="btn_changanshibie">长按识别</button>
+                    </div>
                 </dd>
             </dl>
         </div>
@@ -108,6 +93,7 @@ if (!isPc) {
             <label>COMMUNITY　ADDRESS</label>
         </div>
         <div class="contai_addre">
+            <label class="labels"></label>
             <span>成都高新区</span>
         </div>
         <div class="contai_list">
@@ -125,6 +111,7 @@ if (!isPc) {
             </ul>
         </div>
         <div class="contai_addre">
+            <label class="labels"></label>
             <span>成都天府新区</span>
         </div>
         <div class="contai_list">
@@ -140,13 +127,15 @@ if (!isPc) {
     </div>
     <div class="footer">
         <div class="footer_box">
-            <div class="footer_l">
-                <p>益丰众购小区团长免费加盟</p>
-                <p class="footer_num">156　8201　9629</p>
-            </div>
-            <div class="footer_l">
-                <p>益丰众购优质供应商入驻</p>
-                <p class="footer_num">182　8005　2889</p>
+            <div class="footerbox_t">
+                <div class="footer_l">
+                    <p>益丰众购小区团长免费加盟</p>
+                    <p class="footer_num">156　8201　9629</p>
+                </div>
+                <div class="footer_l">
+                    <p>益丰众购优质供应商入驻</p>
+                    <p class="footer_num">182　8005　2889</p>
+                </div>
             </div>
             <div class="footer_r">
                 <p>微信搜索·益丰众购</p>
