--- a/public/template/default/home/index/index.html
+++ b/public/template/default/home/index/index.html
@@ -122,6 +122,11 @@ if (!isPc) {
                     <p>黄金时代</p>
                     <label>四川省成都市高新区中和镇吉龙二街黄金时代235号</label>
                 </li>
+                <li>
+                    <img src="__TMPL__/static/images/img_4.png">
+                    <p>凤凰城</p>
+                    <label>四川省成都市高新区腾鳌新区站华路德赛二街</label>
+                </li>
             </ul>
         </div>
         <div class="contai_addre">
@@ -132,7 +137,7 @@ if (!isPc) {
                 <li>
                     <img src="__TMPL__/static/images/img_3.png">
                     <p>鑫苑.鑫都汇</p>
-                    <label>四川省成都市天府新区牧华路三段鑫苑.鑫都汇8栋4单元1704</label>
+                    <label>四川省成都市天府新区牧华路三段</label>
                 </li>
             </ul>
         </div>        
