--- a/public/template/default/home/index/wap.html
+++ b/public/template/default/home/index/wap.html
@@ -87,6 +87,13 @@ if ('serviceWorker' in navigator) {
                     <label>温情社区服务，售后无忧及时反馈</label>
                 </dd>
             </dl>
+            <dl>
+                <dt><img src="__TMPL__/static/images/img_shouhoufuwu.png"></dt>
+                <dd>
+                    <p>凤凰城</p>
+                    <label>四川省成都市高新区腾鳌新区站华路德赛二街</label>
+                </dd>
+            </dl>
         </div>
         <div class="contai_tit">
             <p>社区地址</p>
@@ -119,7 +126,7 @@ if ('serviceWorker' in navigator) {
                 <li>
                     <img src="__TMPL__/static/images/img_3.png">
                     <p>鑫苑.鑫都汇</p>
-                    <label>四川省成都市天府新区牧华路三段鑫苑.鑫都汇8栋4单元1704</label>
+                    <label>四川省成都市天府新区牧华路三段</label>
                 </li>
             </ul>
         </div>        
