--- a/public/template/default/home/index/wap.html
+++ b/public/template/default/home/index/wap.html
@@ -76,8 +76,8 @@ if ('serviceWorker' in navigator) {
             <dl>
                 <dt><img src="__TMPL__/static/images/img_yunfeiquanmian.png"></dt>
                 <dd>
-                    <p>运费全免</p>
-                    <label>自营配送，完全免费社区直达安全快捷</label>
+                    <p>满9.9元免运费</p>
+                    <label>自营配送，满9.9元免费社区直达安全快捷</label>
                 </dd>
             </dl>
             <dl>
