--- a/public/template/admin_default/backstage/order/print_select.html
+++ b/public/template/admin_default/backstage/order/print_select.html
@@ -11,7 +11,7 @@
 		<div style="text-align:center;">欢迎光临益丰众购</div>
 		<div>==============================</div>
 		<div>生鲜易损坏、不易存储请收货时仔细检查！有质量问题，请在配送当天联系售后。超时不售后！</div>
-		<div>小程序客服：13438844012</div>
+		<div>联系方式：小程序客服</div>
 		<div>---------------------------</div>
 		<div>订单号：{$vo.out_trade_no}</div>
 		<div>用户名：{$vo.nickname}</div>
