--- a/public/template/admin_default/backstage/order/index.html
+++ b/public/template/admin_default/backstage/order/index.html
@@ -44,6 +44,7 @@
                     </if>
 	                <if condition="$is_auth3 eq 0">
                         <a class="layui-btn template-btn" data-confirm="通知筛选结果" url="{:url('Order/template')}">发送待收货通知</a>
+                        <a class="layui-btn" target="_blank" href="{:url('Order/export_order')}">导出当日销售数据表</a>
                     </if>
 	                <!-- 高级搜索 -->
 	            </div>
